--- a/k8s-app.yaml
+++ b/k8s-app.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: user-app-container
-          image: ''
+          image: 'nagakolli/user-service-k8s:1.0.0'
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9191
