--- a/k8s-app.yaml
+++ b/k8s-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: user-app
+  name: user-appk8s
 
 ---
 
@@ -9,7 +9,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: user-svc-deployment
-  namespace: user-app
+  namespace: user-appk8s
 spec:
   selector:
     matchLabels:
@@ -33,7 +33,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: userapp-service
-  namespace: user-app
+  namespace: user-appk8s
 spec:
   selector:
     app: spring-boot-k8s
